# shallow-learning

./: .env.example  .pdm-python  README.md  mypy.ini  pyproject.toml
src/shallow_learning/notebooks/: intro.ipynb  np.ipynb  perceptron.ipynb  prompt-engineering.ipynb
src/shallow_learning/prompt_engineering/: out_of_control_prompt_engineering.ipynb
src/shallow_learning/tools/: chatgpt.py
src/shallow_learning_llm/: disappointing_prompt_engineering.ipynb  prompt_engineering.ipynb
src/shallow_learning_llm/prompt_engineering/: README.md  out_of_control_prompt_engineering.ipynb  prompt_engineering.ipynb
src/shallow_learning_llm/tools/: chat.py  chatgpt.py  completion.py
