[project]
name = "shallow_learning"
version = "0.0.1"
description = ""
authors = [
    {name = "songbinghui", email = "soongbinghui@gmail.com"},
]
dependencies = [
    "jupyterlab>=4.0.8",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
jump = {shell = "cd ./src/shallow_learning/notebooks"}
up = "jupyter lab"
learn = {composite = ["jump", "up"]}